crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__stoneforge_mystic_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "ChangeZone",
        "origin": "Hand",
        "destination": "Battlefield",
        "target": {
          "type": "Typed",
          "type_filters": [
            {
              "Subtype": "Equipment"
            }
          ],
          "controller": "You",
          "properties": [
            {
              "type": "InZone",
              "zone": "Hand"
            }
          ]
        },
        "owner_library": false,
        "enter_transformed": false,
        "enter_tapped": false,
        "enters_attacking": false
      },
      "cost": {
        "type": "Composite",
        "costs": [
          {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "White"
              ],
              "generic": 1
            }
          },
          {
            "type": "Tap"
          }
        ]
      },
      "sub_ability": null,
      "duration": null,
      "description": "{1}{W}, {T}: You may put an Equipment card from your hand onto the battlefield.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": true,
      "target_choice_timing": "Resolution",
      "forward_result": false
    }
  ],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "SearchLibrary",
          "filter": {
            "type": "Typed",
            "type_filters": [
              "Artifact",
              {
                "Subtype": "Equipment"
              }
            ],
            "controller": null,
            "properties": []
          },
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "reveal": true
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "ChangeZone",
            "origin": "Library",
            "destination": "Hand",
            "target": {
              "type": "Any"
            },
            "owner_library": false,
            "enter_transformed": false,
            "enter_tapped": false,
            "enters_attacking": false
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "Shuffle",
              "target": {
                "type": "Controller"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "sorcery_speed": false,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": true,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": null,
      "destination": "Battlefield",
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": true,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When ~ enters, you may search your library for an Equipment card, reveal it, put it into your hand, then shuffle.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
