crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__student_of_warfare_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 365
expression: "&ir"
---
{
  "items": [
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 76,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Level up {W} ({W}: Put a level counter on this. Level up only as a sorcery.)"
      },
      "node": {
        "Keyword": {
          "LevelUp": {
            "type": "Cost",
            "shards": [
              "White"
            ],
            "generic": 0
          }
        }
      }
    },
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 77,
          "end_byte": 86,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "LEVEL 2-6"
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "SetPower",
                "value": 3
              },
              {
                "type": "SetToughness",
                "value": 3
              },
              {
                "type": "AddKeyword",
                "keyword": "FirstStrike"
              }
            ],
            "condition": {
              "type": "HasCounters",
              "counters": {
                "type": "OfType",
                "data": "level"
              },
              "minimum": 2,
              "maximum": 6
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "LEVEL 2-6 / 3/3 / First strike"
          },
          "source_text": "LEVEL 2-6 / 3/3 / First strike",
          "body_ir": null
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 4,
          "last_line": 4,
          "start_byte": 104,
          "end_byte": 112,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "LEVEL 7+"
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "SetPower",
                "value": 4
              },
              {
                "type": "SetToughness",
                "value": 4
              },
              {
                "type": "AddKeyword",
                "keyword": "DoubleStrike"
              }
            ],
            "condition": {
              "type": "HasCounters",
              "counters": {
                "type": "OfType",
                "data": "level"
              },
              "minimum": 7
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "LEVEL 7+ / 4/4 / Double strike"
          },
          "source_text": "LEVEL 7+ / 4/4 / Double strike",
          "body_ir": null
        }
      }
    }
  ],
  "source_text": "Level up {W} ({W}: Put a level counter on this. Level up only as a sorcery.)\nLEVEL 2-6\n3/3\nFirst strike\nLEVEL 7+\n4/4\nDouble strike",
  "card_name": "Student of Warfare"
}
